# opengx

./: CMakeLists.txt  Makefile.wiiopengx  OpenGLConfig.cmake  README.md  opengl.pc.in  wii.toolchain.cmake
.github/workflows/: OpenGX.yml  docs.yml  gamecube.yml  pcsxgc-cmakelistsdottxt.yml  wii-cmake.yml  wii.yml
cmake/: UseLATEX.cmake
doc/src/: CMakeLists.txt  opengx.tex
examples/: CMakeLists.txt
examples/common/: CMakeLists.txt  textures.c  textures.h
examples/sdl2/: CMakeLists.txt
examples/sdl2/opengl20/: CMakeLists.txt  cube_tex.cpp  gl2gears.c  opengx_shaders.c  opengx_shaders.h
examples/sdl2/opengl30/: CMakeLists.txt  fbo.c
nehe_lessons/lesson07/: lesson07.c
src/: accum.c  accum.h  arrays.cpp  arrays.h  call_lists.c  call_lists.h  clip.c  clip.h  debug.c  debug.h  efb.c  efb.h  fbo.c  fbo.h  functions.c  gc_gl.c  getters.c  gpu_resources.c  gpu_resources.h  image_DXT.c  image_DXT.h  murmurhash3.cpp  opengx.h  pixel_stream.cpp  pixel_stream.h  pixels.c  pixels.cpp  pixels.h  raster.cpp  selection.c  selection.h  shader.c  shader.h  shader_api.c  shader_attribute.cpp  shader_functions.h  shader_uniform.c  state.h  stencil.c  stencil.h  (+12 more)
