set(EXTRA_FILES)
set(EXTRA_LIBS)
if(CMAKE_SYSTEM_NAME MATCHES "NintendoWii|NintendoGameCube")
    list(APPEND EXTRA_FILES opengx_shaders.c)
    list(APPEND EXTRA_LIBS opengx)
else()
    list(APPEND EXTRA_LIBS PkgConfig::OPENGL)
endif()

macro(add_example name)
    add_executable(${name} ${EXTRA_FILES} ${ARGN})
    if (TARGET textures)
        list(APPEND EXTRA_LIBS textures)
    endif()
    if (TARGET PkgConfig::GLM)
        list(APPEND EXTRA_LIBS PkgConfig::GLM)
    endif()
    target_link_libraries(${name} ${EXTRA_LIBS} m PkgConfig::SDL2)
endmacro()

pkg_check_modules(GLM IMPORTED_TARGET glm)

if(GLM_FOUND)
    add_example(cube_tex cube_tex.cpp)
endif()
add_example(gl2gears gl2gears.c)
